# urd

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: api.py  cli.py  concepts.py  config.py  connect_api.py  ingest.py  intent.py  llm.py  prompting.py  qdrant_store.py  question_operations.py  question_operations.yaml  retrieval.py  schemas.py  session_state.py  social.py  synonyms.py  synonyms.yaml  synthesis.py
app/static/: index.html
scripts/: inspect_evidence.py
